<resources>
    <string name="app_name">Leurope</string>
    <string name="intro">Presentación</string>
    <string name="desc">Descripción</string>
    <string name="transport">Transporte</string>
    <string name="ocio">Ocio</string>
    <string name="cultur">Cultura</string>
    <string name="logIn">Permisos Especiales</string>
    <string name="closeLogin">Cancelar permisos</string>
    <string name="introduceEmail">Introduzca su Email</string>
    <string name="cancel">Cancelar</string>
    <string name="enter">Acceder</string>
    <string name="introduceContra">Introduzca su contraseña</string>
    <string name="nombre">Lugar de la visita</string>
    <string name="lugar">Nombre</string>
    <string name="conclusion">Ponga su conclusion del sitio</string>
    <string name="descripcion">Descripcion</string>
    <string name="tvdescripcion">Ponga una descripcion del lugar</string>
    <string name="tvimprescindibles">Ponga los lugares imprescindibles del area</string>
    <string name="imprescindibles">Imprescindibles</string>
    <string name="Comer">Que comer</string>
    <string name="lugarComida">Ponga algun lugar donde comer</string>
    <string name="actividades">Actividades de la zona</string>
    <string name="tvactividades">Actividades interesantes</string>
    <string name="lugarcomer">Lugar donde comer</string>
    <string name="lugarInteres">Lugares de interes sociocultural</string>
    <string name="lugarInt">Lugares</string>
    <string name="tvfestividades">Festividades locales</string>
    <string name="festividadLocal">Festividad local</string>
    <string name="platos">Platos de la zona</string>
    <string name="delete">Borrar</string>
    <string name="insertar">Insertar</string>

    <array name="opciones">
        <item>Galeria</item>
        <item>Camara</item>
    </array>
</resources>