<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introduceEmail"
        android:layout_marginBottom="15dp"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/contra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introduceContra"
        android:layout_marginBottom="15dp"
        android:inputType="textPassword"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:layout_marginHorizontal="15dp"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:layout_marginHorizontal="15dp"
            android:text="@string/enter"/>
    </LinearLayout>

</LinearLayout>